# NeuroSense-Modules

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: _tut_assemble.py  _tut_sections.py  generate_report.py  generate_tutorial.py  report.html  tutorial.html
neurosense/: __init__.py  config.py  data_loader.py  features.py  modeling.py  preprocessing.py  roi_timesliding.py  run.py  stats.py
tests/: test_pipeline.py
