[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neurosense"
version = "0.1.0"
description = "NeuroSense EEG emotion pipeline using low-cost sparse electrode devices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mne>=1.6",
    "meegkit>=0.1",
    "scikit-learn>=1.4",
    "sktime[all_extras]>=0.28",
    "pyxdf>=1.16",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
neurosense = "neurosense.run:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurosense*"]
